@@ -73,7 +73,7 @@ public class Helper {
             if (player != null) return player;
             return initialPlayer;
         }
-        java.util.List<Role> roles = member.getRoles();
+        List<Role> roles = member.getRoles();
         for (Player player : players) {
             if (roles.contains(player.getRoleForCommunity())) {
                 return player;
@@ -116,7 +116,7 @@ public class Helper {
             factionColor = StringUtils.substringBefore(factionColor, " "); //TO HANDLE UNRESOLVED AUTOCOMPLETE
             factionColor = AliasHandler.resolveFaction(factionColor);
             for (Player player_ : activeGame.getPlayers().values()) {
-                if(factionColor.equalsIgnoreCase("keleres"))
+                if("keleres".equalsIgnoreCase(factionColor))
                 {
                     if (Objects.equals(factionColor+"a", player_.getFaction())) {
                     player = player_;
@@ -146,7 +146,7 @@ public class Helper {
     }
      public static boolean isSaboAllowed(Game activeGame, Player player) {
        
-        if(activeGame.getName().equalsIgnoreCase("pbd100")){
+        if("pbd100".equalsIgnoreCase(activeGame.getName())){
             return true;
         }
         if(activeGame.getDiscardActionCards().containsKey("sabo1") && activeGame.getDiscardActionCards().containsKey("sabo2") && activeGame.getDiscardActionCards().containsKey("sabo3") && activeGame.getDiscardActionCards().containsKey("sabo4")){
@@ -223,7 +223,7 @@ public class Helper {
         } else {
             String userID = event.getUser().getId();
             Player foundPlayer = activeGame.getPlayers().values().stream().filter(player -> player.getUserID().equals(userID)).findFirst().orElse(null);
-            foundPlayer = Helper.getGamePlayer(activeGame, foundPlayer, event, null);
+            foundPlayer = getGamePlayer(activeGame, foundPlayer, event, null);
             if (foundPlayer != null) {
                 return foundPlayer.getColor();
             }
@@ -257,12 +257,8 @@ public class Helper {
     public static String getAdjacencyOverridePath(int direction) {
         String file = "adjacent_";
         switch (direction) {
-            case 0 -> file += "north.png";
-            case 1 -> file += "north.png";
-            case 2 -> file += "south.png";
-            case 3 -> file += "south.png";
-            case 4 -> file += "south.png";
-            case 5 -> file += "north.png";
+            case 0, 5, 1 -> file += "north.png";
+            case 2, 4, 3 -> file += "south.png";
         }
         String tokenPath = ResourceHelper.getInstance().getResourceFromFolder("extra/", file, "Could not find adjacency file for direction: " + direction);
         if (tokenPath == null) {
@@ -288,7 +284,7 @@ public class Helper {
     }
 
     public static String getRoleMentionByName(Guild guild,  String roleName) {
-        if(roleName == null || guild.getRolesByName(roleName, true) == null){
+        if(roleName == null || guild.getRolesByName(roleName, true).isEmpty()){
             return "@Oopsidoops no name";
         }
         List<Role> roles = guild.getRolesByName(roleName, true);
@@ -322,7 +318,7 @@ public class Helper {
     }
 
     public static String getSCAsMention(Guild guild, int sc, Game activeGame) {
-        if(getRoleMentionByName(guild, getSCName(sc, activeGame)) != null){
+        if(!getRoleMentionByName(guild, getSCName(sc, activeGame)).isEmpty()){
             return getRoleMentionByName(guild, getSCName(sc, activeGame));
         }else{
             return "@SC #"+sc;
@@ -345,7 +341,7 @@ public class Helper {
     }
 
     public static String getSCName(int sc, Game activeGame) {
-        if (Optional.ofNullable(activeGame.getScSetID()).isPresent() && !activeGame.getScSetID().equals("null")) {
+        if (Optional.ofNullable(activeGame.getScSetID()).isPresent() && !"null".equals(activeGame.getScSetID())) {
             return Mapper.getStrategyCardSets().get(activeGame.getScSetID()).getCardValues().get(sc);
         }
         return "" + sc;
@@ -367,29 +363,26 @@ public class Helper {
 
     public static File getSCImageFile(Integer sc, Game activeGame) {
         String scSet = activeGame.getScSetID();
-        if(Optional.ofNullable(activeGame.getScSetID()).isEmpty() || activeGame.getScSetID().equals("null")) { //I don't know *why* this is a thing that can happen, but it is
+        if(Optional.ofNullable(activeGame.getScSetID()).isEmpty() || "null".equals(activeGame.getScSetID())) { //I don't know *why* this is a thing that can happen, but it is
             scSet = "pok";
         }
-        boolean pbd100or500 = activeGame.getName().equals("pbd100") || activeGame.getName().equals("pbd500") && !scSet.equals("tribunal");
+        boolean pbd100or500 = "pbd100".equals(activeGame.getName()) || "pbd500".equals(activeGame.getName()) && !"tribunal".equals(scSet);
         String scAsString = String.valueOf(sc);
         if(pbd100or500) {
             char scValue = String.valueOf(sc).charAt(0);
             scAsString = String.valueOf(scValue);
         }
 
-        File scFile = new File(ResourceHelper.getInstance().getResourceFromFolder("strat_cards/", scSet + "_" + scAsString + ".png", "Could not find SC image!"));
-        if (Optional.ofNullable(scFile).isEmpty()) {
-            return new File(ResourceHelper.getInstance().getResourceFromFolder("strat_cards", "sadFace.png", ""));
-        }
-        return scFile;
+        return new File(ResourceHelper.getInstance().getResourceFromFolder("strat_cards/", scSet +
+            "_" + scAsString + ".png", "Could not find SC image!"));
     }
 
     //private static List<String> testingEmoji = Arrays.asList("🐷","🙉","💩","👺","🥵","🤯","😜","👀","🦕","🐦","🦏","🐸");
 
     public static Emoji getPlayerEmoji(Game activeGame, Player player, Message message) {
-        Emoji emojiToUse = null;
+        Emoji emojiToUse;
         String playerFaction = player.getFaction();
-        emojiToUse = Emoji.fromFormatted(Helper.getFactionIconFromDiscord(playerFaction));
+        emojiToUse = Emoji.fromFormatted(getFactionIconFromDiscord(playerFaction));
         String messageId = message.getId();
 
         if (activeGame.isFoWMode()) {
@@ -398,7 +391,7 @@ public class Helper {
                 if (player_ == player) break;
                 index++;
             }
-            emojiToUse = Emoji.fromFormatted(Helper.getRandomizedEmoji(index, messageId));
+            emojiToUse = Emoji.fromFormatted(getRandomizedEmoji(index, messageId));
         }
 
         return emojiToUse;
@@ -436,8 +429,7 @@ public class Helper {
             case "argent" -> Emojis.Argent;
             case "cabal" -> Emojis.Cabal;
             case "empyrean" -> Emojis.Empyrean;
-            case "ghost" -> Emojis.Ghost;
-            case "creuss" -> Emojis.Ghost;
+            case "ghost", "creuss" -> Emojis.Ghost;
             case "hacan" -> Emojis.Hacan;
             case "jolnar" -> Emojis.Jolnar;
             case "l1z1x" -> Emojis.L1Z1X;
@@ -460,16 +452,12 @@ public class Helper {
 
             case "lazax" -> Emojis.Lazax;
 
-            case "keleres" -> Emojis.Keleres;
-            case "keleresa" -> Emojis.Keleres;
-            case "keleresm" -> Emojis.Keleres;
-            case "keleresx" -> Emojis.Keleres;
+            case "keleres", "keleresx", "keleresm", "keleresa" -> Emojis.Keleres;
 
             case "augers" -> Emojis.augers;
             case "axis" -> Emojis.axis;
             case "bentor" -> Emojis.bentor;
-            case "blex" -> Emojis.blex;
-            case "kyro" -> Emojis.blex;
+            case "blex", "kyro" -> Emojis.blex;
             case "celdauri" -> Emojis.celdauri;
             case "cheiran" -> Emojis.cheiran;
             case "cymiae" -> Emojis.cymiae;
@@ -529,7 +517,7 @@ public class Helper {
 
     public static String getPlanetRepresentationPlusEmoji(String planet) {
         String planetProper = Mapper.getPlanetRepresentations().get(planet);
-        return Helper.getPlanetEmoji(planet) + " " + (Objects.isNull(planetProper) ? planet : planetProper);
+        return getPlanetEmoji(planet) + " " + (Objects.isNull(planetProper) ? planet : planetProper);
     }
     public static String getPlanetRepresentation(String planet, Game activeGame) {
         planet = planet.toLowerCase().replace(" ", "");
@@ -537,12 +525,11 @@ public class Helper {
         planet = planet.replace("-", "");
         UnitHolder unitHolder = activeGame.getPlanetsInfo().get(AliasHandler.resolvePlanet(planet));
         Planet planet2 = (Planet) unitHolder;
-        if(planet2 == null || unitHolder == null){
+        if(planet2 == null){
             return planet + " bot error. Tell fin";
         }
-        String planetProper = Mapper.getPlanetRepresentations().get(AliasHandler.resolvePlanet(planet)) + " (" +planet2.getResources() + "/"+planet2.getInfluence()+")";
 
-        return (Objects.isNull(planetProper) ? planet : planetProper);
+        return Mapper.getPlanetRepresentations().get(AliasHandler.resolvePlanet(planet)) + " (" +planet2.getResources() + "/"+planet2.getInfluence()+")";
     }
 
     public static String getPlanetRepresentationPlusEmojiPlusResourceInfluence(String planetID, Game activeGame) {
@@ -579,14 +566,14 @@ public class Helper {
         List<Button> planetButtons = new ArrayList<>();
         List<String> planets = new ArrayList<>(player.getExhaustedPlanets());
         for (String planet : planets) {
-            Button button = Button.success("refresh_"+planet, Helper.getPlanetRepresentation(planet, activeGame));
+            Button button = Button.success("refresh_"+planet, getPlanetRepresentation(planet, activeGame));
             planetButtons.add(button);
         }
         return planetButtons;
     }
     public static String getPlayerDependingOnFog(Game activeGame, Player player)
     {
-        String ident = "";
+        String ident;
 
         if(activeGame.isFoWMode())
         {
@@ -594,7 +581,7 @@ public class Helper {
         }
         else
         {
-            ident = Helper.getFactionIconFromDiscord(player.getFaction());
+            ident = getFactionIconFromDiscord(player.getFaction());
         }
         return ident;
     }
@@ -621,7 +608,7 @@ public class Helper {
             if(activeGame.getScTradeGoods().get(sc) > 0 && !activeGame.isFoWMode()){
                 label = "[has "+ activeGame.getScTradeGoods().get(sc)+" tg]";
             }
-            if (scEmoji != null && scEmoji.getName().contains("SC") && scEmoji.getName().contains("Back") && !activeGame.isHomeBrewSCMode()) {
+            if (scEmoji.getName().contains("SC") && scEmoji.getName().contains("Back") && !activeGame.isHomeBrewSCMode()) {
                 
                 button = Button.secondary("FFCC_"+playerPicker.getFaction()+"_scPick_" + sc, label).withEmoji(scEmoji);
             } else {
@@ -636,7 +623,7 @@ public class Helper {
         List<Button> planetButtons = new ArrayList<>();
         List<String> planets = new ArrayList<>(player.getReadiedPlanets());
         for (String planet : planets) {
-            Button button = Button.danger("spend_"+planet, Helper.getPlanetRepresentation(planet, activeGame));
+            Button button = Button.danger("spend_"+planet, getPlanetRepresentation(planet, activeGame));
             planetButtons.add(button);
         }
         return planetButtons;
@@ -646,7 +633,7 @@ public class Helper {
         List<Button> planetButtons = new ArrayList<>();
         List<String> planets = new ArrayList<>(player.getPlanets(activeGame));
         for (String planet : planets) {
-            Button button = Button.danger("FFCC_"+player.getFaction()+"_"+prefix+"_"+unit+"_"+planet, Helper.getPlanetRepresentation(planet, activeGame));
+            Button button = Button.danger("FFCC_"+player.getFaction()+"_"+prefix+"_"+unit+"_"+planet, getPlanetRepresentation(planet, activeGame));
             planetButtons.add(button);
         }
         return planetButtons;
@@ -667,100 +654,100 @@ public class Helper {
         boolean regulated = activeGame.getLaws().containsKey("conscription") ||  activeGame.getLaws().containsKey("absol_conscription");
         HashMap<String, UnitHolder> unitHolders = tile.getUnitHolders();
         String tp = tile.getPosition();
-        if(!warfareNOtherstuff.equalsIgnoreCase("muaatagent"))
+        if(!"muaatagent".equalsIgnoreCase(warfareNOtherstuff))
         {
             if(player.hasWarsunTech()) {
                 Button wsButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_warsun_"+tp, "Produce Warsun" );
-                wsButton = wsButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("warsun")));
+                wsButton = wsButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("warsun")));
                 unitButtons.add(wsButton);
             }
             Button fsButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_flagship_"+tp, "Produce Flagship" );
-            fsButton = fsButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("flagship")));
+            fsButton = fsButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("flagship")));
             unitButtons.add(fsButton);
         }
         Button dnButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_dreadnought_"+tp, "Produce Dreadnought" );
-        dnButton = dnButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("dreadnought")));
+        dnButton = dnButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("dreadnought")));
         unitButtons.add(dnButton);
         Button cvButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_carrier_"+tp, "Produce Carrier" );
-        cvButton = cvButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("carrier")));
+        cvButton = cvButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("carrier")));
         unitButtons.add(cvButton);
         Button caButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_cruiser_"+tp, "Produce Cruiser" );
-        caButton = caButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("cruiser")));
+        caButton = caButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("cruiser")));
         unitButtons.add(caButton);
         Button ddButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_destroyer_"+tp, "Produce Destroyer" );
-        ddButton = ddButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("destroyer")));
+        ddButton = ddButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("destroyer")));
         unitButtons.add(ddButton);
         Button ff1Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_fighter_"+tp, "Produce 1 Fighter" );
-        ff1Button = ff1Button.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("fighter")));
+        ff1Button = ff1Button.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("fighter")));
         unitButtons.add(ff1Button);
-        if(!warfareNOtherstuff.equalsIgnoreCase("freelancers") && !regulated && !warfareNOtherstuff.equalsIgnoreCase("sling")&& !warfareNOtherstuff.equalsIgnoreCase("chaosM")){
+        if(!"freelancers".equalsIgnoreCase(warfareNOtherstuff) && !regulated && !"sling".equalsIgnoreCase(warfareNOtherstuff)&& !"chaosM".equalsIgnoreCase(warfareNOtherstuff)){
             Button ff2Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_2ff_"+tp, "Produce 2 Fighters" );
-            ff2Button = ff2Button.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("fighter")));
+            ff2Button = ff2Button.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("fighter")));
             unitButtons.add(ff2Button);
         }
         
-        if(!warfareNOtherstuff.equalsIgnoreCase("freelancers") && !warfareNOtherstuff.equalsIgnoreCase("sling")&& !warfareNOtherstuff.equalsIgnoreCase("chaosM")){
+        if(!"freelancers".equalsIgnoreCase(warfareNOtherstuff) && !"sling".equalsIgnoreCase(warfareNOtherstuff)&& !"chaosM".equalsIgnoreCase(warfareNOtherstuff)){
 
             if(player.hasUnexhaustedLeader("argentagent", activeGame)){
                         Button argentButton = Button.success("FFCC_"+player.getFaction()+"_"+"exhaustAgent_argentagent_"+tile.getPosition(), "Use Argent Agent");
-                        argentButton = argentButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("argent")));
+                        argentButton = argentButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("argent")));
                         unitButtons.add(argentButton);
             }
         }
         for (UnitHolder unitHolder : unitHolders.values()) {
-            if (unitHolder instanceof Planet planet && !warfareNOtherstuff.equalsIgnoreCase("sling")) {
+            if (unitHolder instanceof Planet planet && !"sling".equalsIgnoreCase(warfareNOtherstuff)) {
                 String colorID = Mapper.getColorID(player.getColor());
                 String sdKey =  colorID+ "_sd.png";
                 String csdKey =  colorID+ "_csd.png";
-                if(player.getFaction().equalsIgnoreCase("cabal")){
+                if("cabal".equalsIgnoreCase(player.getFaction())){
                     sdKey = csdKey;
                 }
 
-                if (warfareNOtherstuff.equalsIgnoreCase("warfare")) {
+                if ("warfare".equalsIgnoreCase(warfareNOtherstuff)) {
 
-                    if ((planet.getUnits().get(sdKey) == null || planet.getUnits().get(sdKey) == 0) && !player.getFaction().equalsIgnoreCase("saar")) {
+                    if ((planet.getUnits().get(sdKey) == null || planet.getUnits().get(sdKey) == 0) && !"saar".equalsIgnoreCase(player.getFaction())) {
                         continue;
                     }
                 }
                 
                 String pp = planet.getName();
-                if (warfareNOtherstuff.equalsIgnoreCase("genericBuild")) {
-                    Button sdButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_sd_"+pp, "Place 1 Space Dock on "+Helper.getPlanetRepresentation(pp, activeGame));
-                    sdButton = sdButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("spacedock")));
+                if ("genericBuild".equalsIgnoreCase(warfareNOtherstuff)) {
+                    Button sdButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_sd_"+pp, "Place 1 Space Dock on "+ getPlanetRepresentation(pp, activeGame));
+                    sdButton = sdButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("spacedock")));
                     unitButtons.add(sdButton);
-                    Button pdsButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_pds_"+pp, "Place 1 PDS on "+Helper.getPlanetRepresentation(pp, activeGame));
-                    pdsButton = pdsButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("pds")));
+                    Button pdsButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_pds_"+pp, "Place 1 PDS on "+ getPlanetRepresentation(pp, activeGame));
+                    pdsButton = pdsButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("pds")));
                     unitButtons.add(pdsButton);
                 }
-                Button inf1Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_infantry_"+pp, "Produce 1 Infantry on "+Helper.getPlanetRepresentation(pp, activeGame));
-                inf1Button = inf1Button.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("infantry")));
+                Button inf1Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_infantry_"+pp, "Produce 1 Infantry on "+ getPlanetRepresentation(pp, activeGame));
+                inf1Button = inf1Button.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("infantry")));
                 unitButtons.add(inf1Button);
-                if(!warfareNOtherstuff.equalsIgnoreCase("freelancers") && !regulated && !warfareNOtherstuff.equalsIgnoreCase("chaosM")){
-                    Button inf2Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_2gf_"+pp, "Produce 2 Infantry on "+Helper.getPlanetRepresentation(pp, activeGame) );
-                    inf2Button = inf2Button.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("infantry")));
+                if(!"freelancers".equalsIgnoreCase(warfareNOtherstuff) && !regulated && !"chaosM".equalsIgnoreCase(warfareNOtherstuff)){
+                    Button inf2Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_2gf_"+pp, "Produce 2 Infantry on "+ getPlanetRepresentation(pp, activeGame) );
+                    inf2Button = inf2Button.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("infantry")));
                     unitButtons.add(inf2Button);
                 }
-                Button mfButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_mech_"+pp, "Produce Mech on "+Helper.getPlanetRepresentation(pp, activeGame) );
-                mfButton = mfButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("mech")));
+                Button mfButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_mech_"+pp, "Produce Mech on "+ getPlanetRepresentation(pp, activeGame) );
+                mfButton = mfButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("mech")));
                 unitButtons.add(mfButton);
 
                 
             }
-            else if(ButtonHelper.canIBuildGFInSpace(activeGame, player, tile, warfareNOtherstuff) && !warfareNOtherstuff.equalsIgnoreCase("sling")) {
+            else if(ButtonHelper.canIBuildGFInSpace(activeGame, player, tile, warfareNOtherstuff) && !"sling".equalsIgnoreCase(warfareNOtherstuff)) {
                 Button inf1Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_infantry_space"+tile.getPosition(), "Produce 1 Infantry in space");
-                inf1Button = inf1Button.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("infantry")));
+                inf1Button = inf1Button.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("infantry")));
                 unitButtons.add(inf1Button);
-                if(!warfareNOtherstuff.equalsIgnoreCase("freelancers") && !warfareNOtherstuff.equalsIgnoreCase("chaosM")){
+                if(!"freelancers".equalsIgnoreCase(warfareNOtherstuff) && !"chaosM".equalsIgnoreCase(warfareNOtherstuff)){
                     Button inf2Button = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_2gf_space"+tile.getPosition(), "Produce 2 Infantry in space" );
-                    inf2Button = inf2Button.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("infantry")));
+                    inf2Button = inf2Button.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("infantry")));
                     unitButtons.add(inf2Button);
                 }
                 Button mfButton = Button.success("FFCC_"+player.getFaction()+"_"+placePrefix+"_mech_space"+tile.getPosition(), "Produce Mech in space" );
-                mfButton = mfButton.withEmoji(Emoji.fromFormatted(Helper.getEmojiFromDiscord("mech")));
+                mfButton = mfButton.withEmoji(Emoji.fromFormatted(getEmojiFromDiscord("mech")));
                 unitButtons.add(mfButton);
             }
         }
-        if(placePrefix.equalsIgnoreCase("place")){
+        if("place".equalsIgnoreCase(placePrefix)){
             Button DoneProducingUnits = Button.danger("deleteButtons_"+warfareNOtherstuff, "Done Producing Units");
             unitButtons.add(DoneProducingUnits);
         }
@@ -773,8 +760,8 @@ public class Helper {
         List<String> planets = new ArrayList<>(player.getPlanets(activeGame));
         String finsFactionCheckerPrefix = "FFCC_" + player.getFaction() + "_";
         for (String planet : planets) {
-            if (!Helper.getPlanetRepresentation(planet, activeGame).toLowerCase().contains("mecatol") || ac) {
-                Button button = Button.secondary(finsFactionCheckerPrefix+"diplo_"+planet, Helper.getPlanetRepresentation(planet, activeGame) + " System");
+            if (!getPlanetRepresentation(planet, activeGame).toLowerCase().contains("mecatol") || ac) {
+                Button button = Button.secondary(finsFactionCheckerPrefix+"diplo_"+planet, getPlanetRepresentation(planet, activeGame) + " System");
                 planetButtons.add(button);
             }
 
@@ -1072,8 +1059,8 @@ public class Helper {
 
     // One representation to rule them all
     public static String getPlayerRepresentation(Player player, Game activeGame, Guild guild, boolean overrideFow) {
-        Boolean privateGame = FoWHelper.isPrivateGame(activeGame);
-        if (privateGame != null && privateGame && !overrideFow){
+        boolean privateGame = FoWHelper.isPrivateGame(activeGame);
+        if (privateGame && !overrideFow){
             return getColourAsMention(guild, player.getColor());
         }
 
@@ -1090,8 +1077,8 @@ public class Helper {
     }
 
     private static String defaultPlayerRepresentation(Player player, Guild guild) {
-        StringBuilder sb = new StringBuilder(Helper.getFactionIconFromDiscord(player.getFaction()));
-        sb.append(" ").append(Helper.getPlayerPing(player));
+        StringBuilder sb = new StringBuilder(getFactionIconFromDiscord(player.getFaction()));
+        sb.append(" ").append(getPlayerPing(player));
         if (player.getColor() != null && !"null".equals(player.getColor())) {
             sb.append(" _").append(getColourAsMention(guild, player.getColor())).append("_");
         }
@@ -1102,16 +1089,12 @@ public class Helper {
         return getEmojiFromDiscord(leader.getId());
     }
 
-    public static String getFactionLeaderEmoji(String leaderID) {
-        return getFactionLeaderEmoji(leaderID);
-    }
-
     public static String getLeaderRepresentation(Leader leader, boolean includeTitle, boolean includeAbility, boolean includeUnlockCondition) {
         String leaderID = leader.getId();
 
-        String leaderRep =  Mapper.getLeaderRepresentations().get(leaderID.toString());
+        String leaderRep =  Mapper.getLeaderRepresentations().get(leaderID);
         if (leaderRep == null) {
-            BotLogger.log("Invalid `leaderID=" + leaderID.toString() + "` caught within `Helper.getLeaderRepresentation`");
+            BotLogger.log("Invalid `leaderID=" + leaderID + "` caught within `Helper.getLeaderRepresentation`");
             return leader.getId();
         }
 
@@ -1163,13 +1146,13 @@ public class Helper {
     }
 
     public static String getSCEmojiFromInteger(Integer strategy_card) {
-        String scEmojiName = "SC" + String.valueOf(strategy_card);
-        return Helper.getEmojiFromDiscord(scEmojiName);
+        String scEmojiName = "SC" + strategy_card;
+        return getEmojiFromDiscord(scEmojiName);
     }
 
     public static String getSCBackEmojiFromInteger(Integer strategy_card) {
-        String scEmojiName = "SC" + String.valueOf(strategy_card) + "Back";
-        return Helper.getEmojiFromDiscord(scEmojiName);
+        String scEmojiName = "SC" + strategy_card + "Back";
+        return getEmojiFromDiscord(scEmojiName);
     }
 
     public static void isCCCountCorrect(GenericInteractionCreateEvent event, Game activeGame, String color) {
@@ -1183,7 +1166,7 @@ public class Helper {
             return 0;
         }
         HashMap<String, Tile> tileMap = activeGame.getTileMap();
-        for (java.util.Map.Entry<String, Tile> tileEntry : tileMap.entrySet()) {
+        for (Map.Entry<String, Tile> tileEntry : tileMap.entrySet()) {
             Tile tile = tileEntry.getValue();
             boolean hasCC = AddCC.hasCC(null, color, tile);
             if (hasCC) {
@@ -1256,17 +1239,17 @@ public class Helper {
             }
         }
 
-        List<String> sortedTilePositions = tilePositions.stream().sorted(Comparator.comparingInt(Integer::parseInt)).collect(Collectors.toList());
-        HashMap<String, Tile> tileMap = new HashMap<>(activeGame.getTileMap());
+        List<String> sortedTilePositions = tilePositions.stream().sorted(Comparator.comparingInt(Integer::parseInt)).toList();
+        Map<String, Tile> tileMap = new HashMap<>(activeGame.getTileMap());
         StringBuilder sb = new StringBuilder();
         for (String position : sortedTilePositions) {
             boolean missingTile = true;
             for (Tile tile : tileMap.values()){
                 if (tile.getPosition().equals(position)){
                     String tileID = AliasHandler.resolveStandardTile(tile.getTileID()).toUpperCase();
-                    if (position.equalsIgnoreCase("000") && tileID.equalsIgnoreCase("18")) { //Mecatol Rex in Centre Position
+                    if ("000".equalsIgnoreCase(position) && "18".equalsIgnoreCase(tileID)) { //Mecatol Rex in Centre Position
                         sb.append("{18}");
-                    } else if (position.equalsIgnoreCase("000") && !tileID.equalsIgnoreCase("18")) { //Something else is in the Centre Position
+                    } else if ("000".equalsIgnoreCase(position) && !"18".equalsIgnoreCase(tileID)) { //Something else is in the Centre Position
                         sb.append("{").append(tileID).append("}");
                     } else {
                         sb.append(tileID);
@@ -1275,7 +1258,7 @@ public class Helper {
                     break;
                 }
             }
-            if (missingTile && position.equalsIgnoreCase("000")) {
+            if (missingTile && "000".equalsIgnoreCase(position)) {
                 sb.append("{-1}");
             } else if (missingTile) {
                 sb.append("-1");
@@ -1286,7 +1269,7 @@ public class Helper {
     }
 
     public static Integer getPlayerResourcesAvailable(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getReadiedPlanets());
@@ -1307,7 +1290,7 @@ public class Helper {
     }
 
     public static Integer getPlayerResourcesTotal(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getPlanets());
@@ -1327,7 +1310,7 @@ public class Helper {
     }
 
     public static Integer getPlayerOptimalResourcesAvailable(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getReadiedPlanets());
@@ -1343,7 +1326,7 @@ public class Helper {
     }
 
     public static Integer getPlayerOptimalResourcesTotal(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getPlanets());
@@ -1359,7 +1342,7 @@ public class Helper {
     }
 
     public static Integer getPlayerInfluenceAvailable(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getReadiedPlanets());
@@ -1380,7 +1363,7 @@ public class Helper {
     }
 
     public static Integer getPlayerInfluenceTotal(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getPlanets());
@@ -1401,7 +1384,7 @@ public class Helper {
     }
 
     public static Integer getPlayerOptimalInfluenceAvailable(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getReadiedPlanets());
@@ -1416,7 +1399,7 @@ public class Helper {
     }
 
     public static Integer getPlayerOptimalInfluenceTotal(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getPlanets());
@@ -1432,7 +1415,7 @@ public class Helper {
     }
 
     public static Integer getPlayerFlexResourcesInfluenceAvailable(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getReadiedPlanets());
@@ -1447,7 +1430,7 @@ public class Helper {
     }
 
     public static Integer getPlayerFlexResourcesInfluenceTotal(Player player, Game activeGame) {
-        if (player.getFaction() == null || player.getColor() == null || player.getColor().equals("null")) {
+        if (player.getFaction() == null || player.getColor() == null || "null".equals(player.getColor())) {
             return null;
         }
         List<String> planets = new ArrayList<>(player.getPlanets());
@@ -1462,15 +1445,14 @@ public class Helper {
     }
 
     public static String getPlayerResourceInfluenceRepresentation(Player player, Game activeGame) {
-        StringBuilder sb = new StringBuilder(getPlayerRepresentation(player, activeGame)).append(":\n");
-        sb.append("Resources: ").append(getPlayerResourcesAvailable(player, activeGame)).append("/").append(getPlayerResourcesTotal(player, activeGame)).append("  Optimal: ").append(getPlayerOptimalResourcesAvailable(player, activeGame)).append("/").append(getPlayerOptimalResourcesTotal(player, activeGame)).append("\n");
-        sb.append("Influence: ").append(getPlayerInfluenceAvailable(player, activeGame)).append("/").append(getPlayerInfluenceTotal(player, activeGame)).append("  Optimal: ").append(getPlayerOptimalInfluenceAvailable(player, activeGame)).append("/").append(getPlayerOptimalInfluenceTotal(player, activeGame)).append("\n");
-        return sb.toString();
+        return getPlayerRepresentation(player, activeGame) + ":\n" +
+            "Resources: " + getPlayerResourcesAvailable(player, activeGame) + "/" + getPlayerResourcesTotal(player, activeGame) + "  Optimal: " + getPlayerOptimalResourcesAvailable(player, activeGame) + "/" + getPlayerOptimalResourcesTotal(player, activeGame) + "\n" +
+            "Influence: " + getPlayerInfluenceAvailable(player, activeGame) + "/" + getPlayerInfluenceTotal(player, activeGame) + "  Optimal: " + getPlayerOptimalInfluenceAvailable(player, activeGame) + "/" + getPlayerOptimalInfluenceTotal(player, activeGame) + "\n";
     }
 
-    public static HashMap<String, Integer> getLastEntryInHashMap(LinkedHashMap<String, Integer> linkedHashMap) {
+    public static HashMap<String, Integer> getLastEntryInHashMap(Map<String, Integer> linkedHashMap) {
         int count = 1;
-        for (java.util.Map.Entry<String, Integer> it : linkedHashMap.entrySet()) {
+        for (Map.Entry<String, Integer> it : linkedHashMap.entrySet()) {
             if (count == linkedHashMap.size()) {
                 HashMap<String, Integer> lastEntry = new HashMap<>();
                 lastEntry.put(it.getKey(), it.getValue());
@@ -1539,7 +1521,7 @@ public class Helper {
     }
 
     public static void fixGameChannelPermissions(@NotNull Guild guild, @NotNull Game activeGame) {
-        if (activeGame != null && !activeGame.isFoWMode() && !activeGame.isCommunityMode()) {
+        if (!activeGame.isFoWMode() && !activeGame.isCommunityMode()) {
             String gameName = activeGame.getName();
             List<Role> roles = guild.getRolesByName(gameName, true);
             Role role = null;
@@ -1560,11 +1542,11 @@ public class Helper {
     }
 
     public static void addMapPlayerPermissionsToGameChannels(Guild guild, Game activeGame) {
-        TextChannel tableTalkChannel = (TextChannel) activeGame.getTableTalkChannel();
+        TextChannel tableTalkChannel = activeGame.getTableTalkChannel();
         if (tableTalkChannel != null) {
             addPlayerPermissionsToGameChannel(guild, activeGame, tableTalkChannel);
         }
-        TextChannel actionsChannel = (TextChannel) activeGame.getMainGameChannel();
+        TextChannel actionsChannel = activeGame.getMainGameChannel();
         if (actionsChannel != null) {
             addPlayerPermissionsToGameChannel(guild, activeGame, actionsChannel);
         }
@@ -1604,7 +1586,7 @@ public class Helper {
         try {
         for (ThreadChannel threadChannel : threadChannels) {
             if (threadChannel.getId().equals(messageID)) {
-                return (GuildMessageChannel) threadChannel;
+                return threadChannel;
                 }
             }
             return (GuildMessageChannel) messageChannel;
@@ -1622,8 +1604,8 @@ public class Helper {
         TechnologyType techType = tech.getType();
         String techFaction = tech.getFaction();
         String factionEmoji = "";
-        if (!techFaction.isBlank()) factionEmoji = Helper.getFactionIconFromDiscord(techFaction);
-        String techEmoji = Helper.getEmojiFromDiscord(techType.toString().toLowerCase() + "tech");
+        if (!techFaction.isBlank()) factionEmoji = getFactionIconFromDiscord(techFaction);
+        String techEmoji = getEmojiFromDiscord(techType.toString().toLowerCase() + "tech");
         return techEmoji + "**" + techName + "**" + factionEmoji + "\n";
     }
 
@@ -1631,25 +1613,21 @@ public class Helper {
         List<Button> techButtons = new ArrayList<>();
 
         techs.sort((tech1, tech2) -> {
-            try {
-                int req1 = tech1.getRequirements().length();
-                int req2 = tech2.getRequirements().length();
-                if (req1 < req2) {
-                    return -1;
-                }
-                if (req2 < req1) {
-                    return 1;
-                }
-                return tech1.getName().compareTo(tech2.getName());
-            } catch (Exception e) {
+            int req1 = tech1.getRequirements().length();
+            int req2 = tech2.getRequirements().length();
+            if (req1 < req2) {
+                return -1;
             }
-            return 0;
+            if (req2 < req1) {
+                return 1;
+            }
+            return tech1.getName().compareTo(tech2.getName());
         });
 
         for (TechnologyModel tech : techs) {
             String techName = tech.getName();
             String buttonID = "FFCC_" + player.getFaction() + "_getTech_" + techName;
-            Button techB = null;
+            Button techB;
             switch (techType) {
                 case "propulsion" -> {
                     techB = Button.primary(buttonID, techName);
@@ -1703,9 +1681,7 @@ public class Helper {
                         case "fs" -> techB = techB.withEmoji(Emoji.fromFormatted(Emojis.flagship));
                     }
                 }
-                default -> {
-                    techB = Button.secondary(buttonID, techName);
-                }
+                default -> techB = Button.secondary(buttonID, techName);
             }
             techButtons.add(techB);
         }
@@ -1719,7 +1695,7 @@ public class Helper {
             if (tech.getType().toString().equalsIgnoreCase(techType)) {
                 if (!player.hasTech(tech.getAlias())) {
                     if (!faction.isEmpty()) {
-                        if (playerfaction.equalsIgnoreCase(faction) || (playerfaction.toLowerCase().startsWith("keleres") && faction.equalsIgnoreCase("Keleres"))) {
+                        if (playerfaction.equalsIgnoreCase(faction) || (playerfaction.toLowerCase().startsWith("keleres") && "Keleres".equalsIgnoreCase(faction))) {
                             techs.add(tech);
                         }
                     } else {
@@ -1738,14 +1714,12 @@ public class Helper {
         TechnologyType techType = tech.getType();
         String techFaction = tech.getFaction();
         String factionEmoji = "";
-        if (!techFaction.isBlank()) factionEmoji = Helper.getFactionIconFromDiscord(techFaction);
-        String techEmoji = Helper.getEmojiFromDiscord(techType.toString().toLowerCase() + "tech");
+        if (!techFaction.isBlank()) factionEmoji = getFactionIconFromDiscord(techFaction);
+        String techEmoji = getEmojiFromDiscord(techType.toString().toLowerCase() + "tech");
         
         String techText = tech.getText();
-        StringBuilder sb = new StringBuilder();
-        sb.append(techEmoji).append("**").append(techName).append("**").append(factionEmoji).append("\n");
-        sb.append("> ").append(techText).append("\n");
-        return sb.toString();
+        return techEmoji + "**" + techName + "**" + factionEmoji + "\n" +
+            "> " + techText + "\n";
     }
 
     public static String getAgendaRepresentation(@NotNull String agendaID) {
@@ -1769,11 +1743,9 @@ public class Helper {
 
         //Append helpful commands after relic draws and resolve effects:
         switch (relicID) {
-            case "nanoforge" -> {
-                message.append("Run the following commands to use Nanoforge:\n")
-                       .append("     `/explore relic_purge relic: nanoforge`\n")
-                       .append("     `/add_token token:nanoforge tile_name:{TILE} planet_name:{PLANET}`");
-            }
+            case "nanoforge" -> message.append("Run the following commands to use Nanoforge:\n")
+                   .append("     `/explore relic_purge relic: nanoforge`\n")
+                   .append("     `/add_token token:nanoforge tile_name:{TILE} planet_name:{PLANET}`");
         }
         return message.toString();
     }
@@ -1785,7 +1757,7 @@ public class Helper {
             int scoredPOCount = 0;
             HashMap<String, List<String>> playerScoredPublics = activeGame.getScoredPublicObjectives();
             for (Entry<String, List<String>> scoredPublic : playerScoredPublics.entrySet()) {
-                if (Mapper.getPublicObjectivesStage1().keySet().contains(scoredPublic.getKey()) || Mapper.getPublicObjectivesStage2().keySet().contains(scoredPublic.getKey())) {
+                if (Mapper.getPublicObjectivesStage1().containsKey(scoredPublic.getKey()) || Mapper.getPublicObjectivesStage2().containsKey(scoredPublic.getKey())) {
                     if (scoredPublic.getValue().contains(player.getUserID())) {
                         scoredPOCount++;
                     }
@@ -1813,7 +1785,7 @@ public class Helper {
             if (tile != null) {
                 break;
             }
-            for (java.util.Map.Entry<String, UnitHolder> unitHolderEntry : tile_.getUnitHolders().entrySet()) {
+            for (Map.Entry<String, UnitHolder> unitHolderEntry : tile_.getUnitHolders().entrySet()) {
                 if (unitHolderEntry.getValue() instanceof Planet && unitHolderEntry.getKey().equals(planetName)) {
                     tile = tile_;
                     break;
@@ -1874,7 +1846,7 @@ public class Helper {
     public static boolean playerHasProductionUnitInSystem(Tile tile, Game activeGame, Player player) {
         HashMap<String, UnitHolder> unitHolders = tile.getUnitHolders();
         String colorID = Mapper.getColorID(player.getColor());
-        String mechKey = colorID + "_mf.png";
+        String mechKey;
         for (UnitHolder unitHolder : unitHolders.values()) {
             if (unitHolder.getUnits() == null || unitHolder.getUnits().isEmpty()) continue;
             mechKey = colorID + "_sd.png";
@@ -1885,7 +1857,7 @@ public class Helper {
             if (unitHolder.getUnits().get(mechKey) != null) {
                 return true;
             }
-            if(player.getFaction().equalsIgnoreCase("arborec")){
+            if("arborec".equalsIgnoreCase(player.getFaction())){
                 mechKey = colorID + "_mf.png";
                 if (unitHolder.getUnits().get(mechKey) != null) {
                     return true;
@@ -1923,12 +1895,11 @@ public class Helper {
     }
 
     /**
-     * @param commaSeparatedString
      * @return List of Strings
      */
     public static List<String> getListFromCSV(String commaSeparatedString) {
         StringTokenizer tokenizer = new StringTokenizer(commaSeparatedString, ",");
-        ArrayList<String> values = new ArrayList<>();
+        List<String> values = new ArrayList<>();
         while (tokenizer.hasMoreTokens()) {
             values.add(tokenizer.nextToken().trim());
         }
@@ -1936,22 +1907,22 @@ public class Helper {
     }
 
     public static void removePoKComponents(Game activeGame, String codex) {
-        boolean removeCodex = codex != null && codex.equalsIgnoreCase("y");
+        boolean removeCodex = "y".equalsIgnoreCase(codex);
 
         //removing Action Cards
         HashMap<String,ActionCardModel> actionCards = Mapper.getActionCards();
         for (ActionCardModel ac : actionCards.values()) {
-            if (ac.getSource().equals("pok")) {
+            if ("pok".equals(ac.getSource())) {
                 activeGame.removeACFromGame(ac.getAlias());
-            } else if (ac.getSource().equals("codex1") && removeCodex) {
+            } else if ("codex1".equals(ac.getSource()) && removeCodex) {
                 activeGame.removeACFromGame(ac.getAlias());
             }
         }
 
         //removing SOs
-        HashMap<String, SecretObjectiveModel> soList = Mapper.getSecretObjectives();
+        Map<String, SecretObjectiveModel> soList = Mapper.getSecretObjectives();
         for (SecretObjectiveModel so : soList.values()) {
-            if (so.getSource().equals("pok")) {
+            if ("pok".equals(so.getSource())) {
                 activeGame.removeSOFromGame(so.getAlias());
             }
         }
@@ -1959,7 +1930,7 @@ public class Helper {
         //removing POs
         HashMap<String, PublicObjectiveModel> poList = Mapper.getPublicObjectives();
         for (PublicObjectiveModel po : poList.values()) {
-            if (po.getSource().equals("pok")) {
+            if ("pok".equals(po.getSource())) {
                 if (po.getPoints() == 1) {
                     activeGame.removePublicObjective1(po.getAlias());
                 }
@@ -1971,7 +1942,6 @@ public class Helper {
     }
 
     /**
-     * @param commaSeparatedString
      * @return Set of Strings (no duplicates)
      */
     public static Set<String> getSetFromCSV(String commaSeparatedString) {
